# STManager

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: build-matrix.yml  release-on-tag.yml
cli/: cli_args.cpp  cli_args.h  cli_command_selector.cpp  cli_command_selector.h  cli_net.cpp  cli_net.h  cli_pair.cpp  cli_pair.h  cli_state.cpp  cli_state.h  main.cpp
cmake/triplets/: x64-linux-static.cmake  x64-mingw-static.cmake
include/STManager/: data.h  manager.h  sync.h  tcp_transport.h
include/STUtils/: data.h
src/: archive_stream.cpp  archive_stream.h  data.cpp  discovery_mdns.cpp  discovery_mdns.h  fd_stream.cpp  fd_stream.h  fs_ops.cpp  fs_ops.h  git_manifest.cpp  git_manifest.h  locate.cpp  locate.h  path_safety.cpp  path_safety.h  platform_compat.cpp  platform_compat.h  sync.cpp  sync_protocol.cpp  sync_protocol.h  sync_server.cpp  tcp_transport.cpp  trusted_device_store.cpp  trusted_device_store.h
tests/: cli_tests.cpp  stmanager_tests.cpp  sync_network_tests.cpp  test_helpers.cpp  test_helpers.h
